--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ high-quality work under tight deadlines </li>
             </p>
             <p class="work2">
               <strong>Front Desk Coordinator<br />
-                The Assembly</strong>
+                Savills</strong>
        </p>
 
        <div class="d3">
