--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
   <div class="hobbies">
       <h1 class="hobby">BasketBall
       </h1> 
-      <p>A hoop in the backyard, a ball in my hand.   I never knew <br> it would make me a man.</p>
+      <p>A hoop in the backyard, a ball in my hand. I never knew that it would make me a man.</p>
     </div>
 
    
@@ -74,7 +74,7 @@
     <div class="hobbies2">
       <h1 class="hobby2">Swimming
       </h1> 
-      <p>I'm not the fastest swimmer, but I'm the most determined. I never give up, <br> no matter what it's always one more lap</p>
+      <p>I'm not the fastest swimmer, but I'm the most determined. I never give up, no matter what it's always one more lap</p>
     </div>
 
    
@@ -84,7 +84,7 @@
   <div class="hobbies3">
     <h1 class="hobby3">Gym
     </h1> 
-    <p>The gym is my sanctuary. It's where I can go to clear my head <br> and focus on my goals.</p>
+    <p>The gym is my sanctuary. It's where I can go to clear my head and focus on my goals.</p>
   </div>
 
  
@@ -107,12 +107,13 @@
       <a href="index.html">Services</a>
     </div>
     <div class="footer-social">
-      <a href="#"><i class="fab fa-facebook"></i></a>
-      <a href="#"><i class="fab fa-twitter"></i></a>
-      <a href="#"><i class="fab fa-instagram"></i></a>
-    </div>
+      <a href="https://www.facebook.com/profile.php?id=100090981760088"><i class="fab fa-facebook"></i></a>
+      <a href="https://twitter.com/muneeb0758"><i class="fab fa-twitter"></i></a>
+      <a href="https://www.instagram.com/muneeb._.5/"><i class="fab fa-instagram"></i></a>
+      <a href="https://www.linkedin.com/in/muneeb-ahmed-a82590252/"><i class="fab fa-linkedin"></i></a>
+</div>
     <div class="footer-copyright">
-      Copyright &copy; 2023 Myself
+      Copyright &copy; 2023 Myself by Muneeb
     </div>
   </footer>
 
