--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Personal Website</title>
   <link rel="stylesheet" href="style.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   <script type="text/javascript" src="https://cdn.emailjs.com/sdk/2.3.2/email.min.js"></script>
   <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
@@ -34,7 +32,7 @@
  <h1 class="name2"> Ahmed </h1>
  
  <div class="shortbio">
-   <p class="bio">AI Engineer aimed to revolutionize industries and <br> impactful autonomous systems </p>
+   <p class="bio">AI Engineer aimed to revolutionize industries and impactful autonomous systems </p>
  </div>
 
  <img class="pic" src="progess.png" alt="Muneeb's Picture">
@@ -53,7 +51,7 @@
   <button class="abt">About Me</button>
   <div class="abt-text">
     <h3>My Story</h3>
-    <p>In the land of data, where numbers rule and logic reigns supreme,  I live a being of pure creativity.  I am a graphic designer, a data manager, and an AI student. I have a keen  eye for detail and a dedication to precision and accuracy. I am driven by a passion forcutting-edge technology and a desire to make a tangible impact in the world. I am excite to apply my skills to developing intelligent systems  that can revolutionize industries and make a meaningful difference in people's lives.
+    <p>In the land of data, where numbers rule and logic reigns supreme,  I live a being of pure creativity.  I am a graphic designer, a data manager, and an AI student. I have a keen  eye for detail and a dedication to precision and accuracy. I am driven by a passion forcutting-edge technology and a desire to make a tangible impact in the world. I am excite to apply my skills for developing intelligent systems  that can revolutionize industries and make a meaningful difference in people's lives.
     </p>
   </div>
 
@@ -222,25 +220,25 @@
   </script>
  
 
-  
   <!-- footer -->
 
   <footer>
     <img src="logo.png" alt="Logo">
     <div class="footer-links">
-      <a href="#">Home</a>
-      <a href="#">About</a>
-      <a href="#">Portfolio</a>
-      <a href="#">Blog</a>
-      <a href="#">Services</a>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="portfolio.html">Portfolio</a>
+      <a href="index.html">Services</a>
     </div>
     <div class="footer-social">
-      <a href="#"><i class="fab fa-facebook"></i></a>
-      <a href="#"><i class="fab fa-twitter"></i></a>
-      <a href="#"><i class="fab fa-instagram"></i></a>
+      <a href="https://www.facebook.com/profile.php?id=100090981760088"><i class="fab fa-facebook"></i></a>
+      <a href="https://twitter.com/muneeb0758"><i class="fab fa-twitter"></i></a>
+      <a href="https://www.instagram.com/muneeb._.5/"><i class="fab fa-instagram"></i></a>
+      <a href="https://www.linkedin.com/in/muneeb-ahmed-a82590252/"><i class="fab fa-linkedin"></i></a>
+
     </div>
     <div class="footer-copyright">
-      Copyright &copy; 2023 Website Name
+      Copyright &copy; 2023 Myself by Muneeb
     </div>
   </footer>
   
