--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
     <a href="index.html" class="home">Home</a>
     <a href="about.html" class="about">About</a>
     <a href="portfolio.html" class="portfolio">Portfolio</a>    
-    <a href="services.html" class="services">Services</a>
+    <a href="index.html" class="services">Services</a>
     <a href="contact.html" class="contact">Contact</a>
   </nav>
 </header>
@@ -131,19 +131,19 @@
   <footer>
     <img class ="footer-logo" src="logo.png" alt="Logo">
     <div class="footer-links">
-      <a href="#">Home</a>
-      <a href="#">About</a>
-      <a href="#">Portfolio</a>
-      <a href="#">Blog</a>
-      <a href="#">Services</a>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="portfolio.html">Portfolio</a>
+      <a href="index.html">Services</a>
     </div>
     <div class="footer-social">
-      <a href="#"><i class="fab fa-facebook"></i></a>
-      <a href="#"><i class="fab fa-twitter"></i></a>
-      <a href="#"><i class="fab fa-instagram"></i></a>
-    </div>
+      <a href="https://www.facebook.com/profile.php?id=100090981760088"><i class="fab fa-facebook"></i></a>
+      <a href="https://twitter.com/muneeb0758"><i class="fab fa-twitter"></i></a>
+      <a href="https://www.instagram.com/muneeb._.5/"><i class="fab fa-instagram"></i></a>
+      <a href="https://www.linkedin.com/in/muneeb-ahmed-a82590252/"><i class="fab fa-linkedin"></i></a>
+ </div>
     <div class="footer-copyright">
-      Copyright &copy; 2023 Website Name
+      Copyright &copy; 2023 Myself by Muneeb
     </div>
   </footer>
   
