--- a/portfolio.html
+++ b/portfolio.html
@@ -38,9 +38,8 @@
         <h3 class="personalinfo">Personal Information</h3>
         <hr>
         <ul>
-          <li>Date of birth: 11-06-2002</li>
           <li>Nationality: Pakistani</li>
-          <li>Address: 401A, Alexandra Avenue, London</li>
+          <li>Address: London, UK</li>
           <li>Phone number: +44 (0) 7445522488</li>
           <li class="email">Email: dev.muneeb@gmail.com</li>
         </ul>
