--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
         <a href="about.html" class="about">About</a>
         <a href="portfolio.html" class="portfolio">Portfolio</a>    
         <a href="index.html" class="services" onclick="document.querySelector('.serv').scrollIntoView(); return false;">Services</a>
-        <a href="#" class="contact">Contact</a>
+        <a href="contact.html" class="contact">Contact</a>
       </nav>
   </header>
   
@@ -55,7 +55,7 @@
   
   </div>
   
-  <h1  style=" margin-left: 6%;">Hobbies</h1>
+  <h1  style=" margin-left: 6%; margin-top: 15%;">Hobbies</h1>
 
 
   <div class="hobbies">
