--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <a href="about.html" class="about">About</a>
         <a href="portfolio.html" class="portfolio">Portfolio</a>    
         <a href="#" class="services" onclick="document.querySelector('.serv').scrollIntoView(); return false;">Services</a>
-        <a href="#" class="contact">Contact</a>
+        <a href="contact.html" class="contact">Contact</a>
       </nav>
   </header>
 
@@ -138,8 +138,6 @@
 
 
 <title>Contact Form</title>
-</head>
-<body>
   <form id="contact-form">
     <h2>Contact Us</h2>
     <div class="form-group">
