--- a/portfolio.html
+++ b/portfolio.html
@@ -19,6 +19,8 @@
     <a href="portfolio.html" class="portfolio">Portfolio</a>    
     <a href="index.html" class="services">Services</a>
     <a href="contact.html" class="contact">Contact</a>
+    <a href="projects.html" class="projects">Projects</a>
+
   </nav>
 </header>
 
