--- a/contact.html
+++ b/contact.html
@@ -21,6 +21,8 @@
         <a href="portfolio.html" class="portfolio">Portfolio</a>    
         <a href="index.html" class="services" onclick="document.querySelector('.serv').scrollIntoView(); return false;">Services</a>
         <a href="contact.html" class="contact">Contact</a>
+        <a href="projects.html" class="projects">Projects</a>
+
       </nav>
   </header>
   
