--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <a href="portfolio.html" class="portfolio">Portfolio</a>    
         <a href="#" class="services" onclick="document.querySelector('.serv').scrollIntoView(); return false;">Services</a>
         <a href="contact.html" class="contact">Contact</a>
+        <a href="projects.html" class="projects">Projects</a>
       </nav>
   </header>
 
