--- a/projects.html
+++ b/projects.html
@@ -33,13 +33,13 @@
     <p class="project1-description">Built an end-to-end Java Swing application for core banking operations like login, deposit, withdrawal, transfer and statement view. Implemented a professional UI with custom components. Engineered a robust backend to securely persist account data and transaction history. Added input validation and exception handling for resilience. Showcases OOP design and rapid development skills. Highlights mastery over core Java and Swing for building practical applications.</p>
     <div class="project1">
       <div class="project1-image1" >
-        <a href="https://claude.ai/chat/4fbdba39-e036-4a4f-b13a-5244836264fd" target="_blank">
+<!--         <a href="https://claude.ai/chat/4fbdba39-e036-4a4f-b13a-5244836264fd" target="_blank"> -->
           <img  class="project1-image1 "src="/Project1.Elements/Login.png" alt="Image 1">
           
           <!-- <img  class="project1-image1 "src= "/Project1.Elements/Login.png" alt="Image 1"  <a href="https://claude.ai/chat/4fbdba39-e036-4a4f-b13a-5244836264fd"> </a>>  -->
           <!-- <img class="project1-image1" src="/Project1.Elements/Login.png" alt="Project1 Image 1"> -->
           <img class="project1-image2" src="/Project1.Elements/MainPage.png" alt="Project1 Image 2">
-        </a>
+<!--         </a> -->
      
     </div>
     </div>
