--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
+  <div class ="wholepage">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -116,8 +118,7 @@
 
 
  <div class="serv">
-  <button id="back-to-top">Back to Top</button>
-<h2 >This is My Expertise, <br> The Services I'll Provide My Clients</h2>
+<h2>This is My Expertise, <br> The Services I'll Provide My Clients</h2>
 </div>
 
 
@@ -241,6 +242,7 @@
     </div>
   </footer>
   
+</div>
  
 
 
