--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
  </div>
 
  <img class="pic" src="progess.png" alt="Muneeb's Picture">
-
  <button class="btn" onclick="window.location.href='mailto:dev.muneeb@gmail.com'">Email Me</button>
 
  <div class="image-info">
@@ -221,6 +220,12 @@
  
 
   <!-- footer -->
+   
+ 
+
+
+
+
 
   <footer>
     <img src="logo.png" alt="Logo">
@@ -230,13 +235,25 @@
       <a href="portfolio.html">Portfolio</a>
       <a href="index.html">Services</a>
     </div>
-    <div class="footer-social">
-      <a href="https://www.facebook.com/profile.php?id=100090981760088"><i class="fab fa-facebook"></i></a>
-      <a href="https://twitter.com/muneeb0758"><i class="fab fa-twitter"></i></a>
-      <a href="https://www.instagram.com/muneeb._.5/"><i class="fab fa-instagram"></i></a>
-      <a href="https://www.linkedin.com/in/muneeb-ahmed-a82590252/"><i class="fab fa-linkedin"></i></a>
+   
+    
+    
+ <div class="footer-social">
 
-    </div>
+  <a href="https://www.linkedin.com/in/muneeb-ahmed-a82590252/" style="--color: #0072b1">
+  <i class="fa-brands fa-linkedin-in"></i></a>
+
+      <a href="https://www.instagram.com/muneeb._.5/" style="--color: #e1306c">
+          <i class="fa-brands fa-instagram"></i></a>
+
+          <a href="https://twitter.com/muneeb0758" style="--color: #ff0050">
+              <i class="fa-brands fa-twitter"></i></a>
+
+              <a href="https://www.facebook.com/profile.php?id=100090981760088" style="--color: #426742">
+                  <i class="fa-brands fa-facebook-f"></i></a>
+  
+</div>
+
     <div class="footer-copyright">
       Copyright &copy; 2023 Myself by Muneeb
     </div>
