--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Personal Website</title>
+  <title>MebHub</title>
   <link rel="stylesheet" href="about.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
@@ -12,14 +12,14 @@
     <div class="both-logos">
 
       <img class="mylogo" src="logo.png" alt="logo">
-      <h2 class="logo-text">Myself </h2>
+      <h2 class="logo-text">MebHub </h2>
     </div>
     <nav class="nav">
 
-        <a href="index.html" class="home">Home</a>
-        <a href="about.html" class="about">About</a>
-        <a href="portfolio.html" class="portfolio">Portfolio</a>    
-        <a href="index.html" class="services" onclick="document.querySelector('.serv').scrollIntoView(); return false;">Services</a>
+      <a href="index.html" class="home">Home</a>
+      <a href="about.html" class="about">About</a>
+      <a href="portfolio.html" class="portfolio">Portfolio</a>    
+      <a href="index.html" class="services" onclick="document.querySelector('.serv').scrollIntoView(); return false;">Services</a>
         <a href="contact.html" class="contact">Contact</a>
         <a href="projects.html" class="projects">Projects</a>
 
@@ -36,14 +36,11 @@
     </div>
     <ul class="info">
       <li><span>Name:</span> Muneeb Ahmed</li>
-      <li><span>DOB:</span> June 11, 2002</li>
       <li><span>Address:</span> London UK</li>
       <li>
         <span>Email:</span> 
         <a class="email" href="mailto:dev.muneeb@hotmail.com" style="color: black;">dev.muneeb@hotmail.com</a>
       </li>
-      <li><span>Phone:</span>
-        <a href="tel:+447445522488" style="color: black;">+44 7445522488</a></li>
     </ul>
   
     <h1 style="margin-top: 7%; margin-left: 3%;">My Story</h1>
@@ -115,20 +112,11 @@
       <a href="https://www.linkedin.com/in/muneeb-ahmed-a82590252/"><i class="fab fa-linkedin"></i></a>
 </div>
     <div class="footer-copyright">
-      Copyright &copy; 2023 Myself by Muneeb
+      Copyright &copy; 2023 MebHub by Muneeb
     </div>
   </footer>
 
-  <!-- <script>
-    /* Show footer on scroll */
-window.onscroll = function() {
-  if(document.documentElement.scrollTop + window.innerHeight >= document.documentElement.offsetHeight) {
-    footer.style.opacity = 1; 
-  } else {  
-    footer.style.opacity = 0;
-  }
-}
-  </script> -->
+ 
   
 </body>
 
