--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Personal Website</title>
+  <title>Mebhub</title>
   <link rel="stylesheet" href="contact.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
@@ -12,7 +12,7 @@
     <div class="both-logos">
 
       <img class="mylogo" src="logo.png" alt="logo">
-      <h2 class="logo-text">Myself </h2>
+      <h2 class="logo-text">MebHub </h2>
     </div>
     <nav class="nav">
 
@@ -29,6 +29,9 @@
   <main>
 
     <div class="container">
+      <div>
+        <img class="contact-img" src="contact.png" alt="Contact Us">
+      </div>
 
       <h1 class="contact-heading">Contact Me</h1>
 
@@ -39,6 +42,7 @@
           <a class="link2" href="tel:+447445522488">Call me: +44 7445522488</a>
         </div>
     </div>
+
 
   </main>
 
@@ -142,7 +146,7 @@
 
     </div>
     <div class="footer-copyright">
-      Copyright &copy; 2023 Myself by Muneeb
+      Copyright &copy; 2023 MebHub by Muneeb
     </div>
   </footer>
   
