--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Personal Website</title>
+  <title>Mebhub</title>
   <link rel="stylesheet" href="projects.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
  
@@ -12,7 +12,7 @@
   <div class="both-logos">
     
     <img class="mylogo" src="logo.png" alt="logo">
-    <h2 class="logo-text">Myself </h2>
+    <h2 class="logo-text">MebHub </h2>
   </div>
   <header>
     
@@ -21,7 +21,7 @@
         <a href="index.html" class="home">Home</a>
         <a href="about.html" class="about">About</a>
         <a href="portfolio.html" class="portfolio">Portfolio</a>    
-        <a href="#" class="services" onclick="document.querySelector('.serv').scrollIntoView(); return false;">Services</a>
+        <a href="index.html" class="services" onclick="document.querySelector('.serv').scrollIntoView(); return false;">Services</a>
         <a href="contact.html" class="contact">Contact</a>
         <a href="projects.html" class="projects">Projects</a>
 
@@ -106,7 +106,7 @@
 
     </div>
     <div class="footer-copyright">
-      Copyright &copy; 2023 Myself by Muneeb
+      Copyright &copy; 2023 MebHub by Muneeb
     </div>
   </footer>
   
