--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,9 @@
   </div>
   <nav class="nav">
     <a href="index.html" class="home">Home</a>
+    <a href="about.html" class="about">About</a>
     <a href="portfolio.html" class="portfolio">Portfolio</a>    
+    <a href="index.html" class="services" onclick="document.querySelector('.serv').scrollIntoView(); return false;">Services</a>
     <a href="contact.html" class="contact">Contact</a>
     <a href="projects.html" class="projects">Projects</a>
 
@@ -39,6 +41,7 @@
         <h3 class="personalinfo">Personal Information</h3>
         <hr>
         <ul>
+          <li>Nationality: Pakistani</li>
           <li>Address: London, UK</li>
           <li>Phone number: +44 (0) 7445522488</li>
           <li class="email">Email: dev.muneeb@gmail.com</li>
@@ -63,15 +66,6 @@
     <section>
       <h3 class="education">Education</h3>
       <hr>
-    </article>
-    <article class="ed2">
-      <p class="date2">09/2022 – present<br>London, United Kingdom</p>
-      <p class="school2" style="margin-top: 10px;">
-        <strong>Artificial Intelligence (Computer Science) | Bachelor's Brunel University London</strong>
-        <br>
-        Passionate about AI, looking forward to excelling in upcoming years
-      </p>
-    </article>
       <article class="ed1">
         <p class="date1">05/2017 – 04/2021<br>Sui, Pakistan</p>
         <p class="school1">
@@ -80,21 +74,30 @@
           Overcoming challenges in hostel life, I developed problem-solving skills that
           helped me secure 93.3% in my finals.
         </p>
-     
+      </article>
+      <article class="ed2">
+        <p class="date2">09/2022 – present<br>London, United Kingdom</p>
+        <p class="school2" style="margin-top: 10px;">
+          <strong>Artificial Intelligence (Computer Science) | Bachelor's Brunel University London</strong>
+          <br>
+          Passionate about AI, looking forward to excelling in upcoming years
+        </p>
+      </article>
     </section>
 
     <section>
       <h3 class="experience">Work Experience</h3>
       <hr>
       <article class="ex1">
-        <p class="date3">05/2023 – present<br>London, England</p>
-        <p class="work2">
-          <strong>Front Desk Coordinator<br>Savills</strong>
+        <p class="date3">02/2022 – 07/2022<br>ISLAMABAD, Pakistan</p>
+        <p class="work1">
+          <strong>Transcriber<br>Servixer, LLC</strong>
         </p>
-        <div class="d3">
+        <div class="d2">
           <ul>
-            <li>Efficiently managed access control procedures, verifying identification and enforcing security protocols to maintain the integrity of the premises.</li>
-            <li>Developed strong interpersonal skills, effectively communicating with a diverse range of individuals to address their inquiries and concerns promptly.</li>
+            <li>Transcribed audio and video recordings into written documents with precision and attention to detail</li>
+            <li>Proofread and edited transcriptions to ensure they were error-free and formatted correctly</li>
+            <li>Developed strong attention to detail and time-management skills, delivering high-quality work under tight deadlines</li>
           </ul>
         </div>
       </article>
@@ -112,19 +115,17 @@
         </div>
       </article>
       <article class="ex1">
-        <p class="date3">02/2022 – 07/2022<br>ISLAMABAD, Pakistan</p>
-        <p class="work1">
-          <strong>Transcriber<br>Servixer, LLC</strong>
+        <p class="date3">05/2023 – present<br>London, England</p>
+        <p class="work2">
+          <strong>Front Desk Coordinator<br>Savills</strong>
         </p>
-        <div class="d2">
+        <div class="d3">
           <ul>
-            <li>Transcribed audio and video recordings into written documents with precision and attention to detail</li>
-            <li>Proofread and edited transcriptions to ensure they were error-free and formatted correctly</li>
-            <li>Developed strong attention to detail and time-management skills, delivering high-quality work under tight deadlines</li>
+            <li>Efficiently managed access control procedures, verifying identification and enforcing security protocols to maintain the integrity of the premises.</li>
+            <li>Developed strong interpersonal skills, effectively communicating with a diverse range of individuals to address their inquiries and concerns promptly.</li>
           </ul>
         </div>
       </article>
-      
     </section>
 
 
