--- a/Blog.html
+++ b/Blog.html
@@ -27,6 +27,7 @@
         <a href="Blog.html" class="services" #>Blog</a>
 
         <a href="index.html" class="home">Home</a>
+        <a href="about.html" class="about">About</a>
         <a href="portfolio.html" class="portfolio">Portfolio</a>    
         <a href="contact.html" class="contact">Contact</a>
         <a href="projects.html" class="projects">Projects</a>
