--- a/about.html
+++ b/about.html
@@ -35,7 +35,8 @@
       <h2>About Me</h2> 
     </div>
     <ul class="info">
-   
+      <li><span>Name:</span> Muneeb Ahmed</li>
+      <li><span>Address:</span> London UK</li>
       <li>
         <span>Email:</span> 
         <a class="email" href="mailto:dev.muneeb@hotmail.com" style="color: black;">dev.muneeb@hotmail.com</a>
