--- a/index.html
+++ b/index.html
@@ -142,11 +142,11 @@
   <form id="contact-form">
     <h2>Contact Us</h2>
     <div class="form-group">
-      <label for="name">Your Name</label>
+      <label for="name">Name</label>
       <input type="text" id="name" class="form-control" placeholder="Your Name">
     </div>
     <div class="form-group">
-      <label for="youremail">Your Email</label>
+      <label for="youremail">Email</label>
       <input type="email" id="youremail" class="form-control" placeholder="Your Email">
     </div>
     <div class="form-group">
